@@ -1,6 +1,6 @@
 #include "gtkextratypebuiltins.h"
 
-
+/* This file is generated by glib-mkenums, do not modify it. This code is licensed under the same license as the containing project. Note that it links to GLib, so must comply with the LGPL linking clauses. */
 
 #define GTKEXTRA_ENABLE_BROKEN
 #include "gtkextra.h"
@@ -447,5 +447,5 @@ gtk_plot_units_get_type (void)
   return etype;
 }
 
-
+/* Generated data ends here */
 
