@@ -1,5 +1,5 @@
 
-
+/* This file is generated by glib-mkenums, do not modify it. This code is licensed under the same license as the containing project. Note that it links to GLib, so must comply with the LGPL linking clauses. */
 
 #ifndef __GTKEXTRA_TYPE_BUILTINS_H__
 #define __GTKEXTRA_TYPE_BUILTINS_H__
@@ -71,5 +71,5 @@ G_END_DECLS
 
 #endif /* __GTKEXTRA_TYPE_BUILTINS_H__ */
 
-
+/* Generated data ends here */
 
