@@ -866,6 +866,10 @@ if 1i then 1 else 0						1
 A=[1,2,3,4;1i,2,3i,4;1,1,1,1;1i,1i,1i,9];A^-1 * A == I(4)	true
 IntegerFromBoolean(1i)						1
 MakeVector([1,2;3,4])						[1;3;2;4]
+MakeRowVector([1,2;3,4])					[1,2,3,4]
+MakeRowVector([1,2])						[1,2]
+MakeVector([1,2])						[1;2]
+MakeVector([1;2])						[1;2]
 MakeVector(null)+1						((null)+1)
 Gamma(5)							24.0
 ToeplitzMatrix ([1,2i,3i])					[1,2i,3i;-2i,1,2i;-3i,-2i,1]
@@ -1289,6 +1293,18 @@ Factorial([0,1,2,3,4,5,6])					[1,1,2,6,24,120,720]
 DoubleFactorial([0,1,2,3,4,5,6])				[1,1,2,3,8,15,48]
 StripZeroColumns(zeros(4,4))+0					((null)+0)
 Image(zeros(4,4))+0						((null)+0)
+elements(null)							0
+elements([1,2])							2
+elements(`[1,[1,2]])						2
+elements([1;2])							2
+elements([1,3;2,8])						4
+v=[1,2,3];w=AppendElement(v,5)					[1,2,3,5]
+v=[1;2;3];w=AppendElement(v,5)					[1;2;3;5]
+v=[1];w=AppendElement(v,5)					[1,5]
+v=null;w=AppendElement(v,5)					[5]
+v=[1,2,3];w=AppendElement(v,5);v				[1,2,3]
+v=[1,2,3];w=AppendElement(v,v)					[1,2,3,[1,2,3]]
+v=[1,2,3];w=AppendElement(v,v);v				[1,2,3]
 load "nullspacetest.gel"					true
 load "longtest.gel"						true
 load "testprec.gel"						true
