@@ -1,3 +1,15 @@
+Wed Oct 24 13:38:31 2018  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/funclib.c, src/funclibhelper.cP: Add AppendVector, plus a few
+	  minor fixes
+	
+	* lib/sets/basic.gel: improve performance, and fix sets of vectors
+
+	* lib/linear_algebra/misc.gel: Add MakeColumnVector (alias to
+	  MakeVecctor), MakeRowVector
+
+	* help/C/genius.xml: add docs for the new functions
+
 Tue Oct 09 23:18:17 2018  Jiri (George) Lebl <jirka@5z.com>
 
 	* examples/duffing-equation-trajectories.gel: Add a comment
